Correct tiny navbar alignment

--- a/app/assets/stylesheets/forums.scss
+++ b/app/assets/stylesheets/forums.scss
@@ -113,6 +113,7 @@
   width: 23px;
   height: 23px;
   border-radius: 3px;
+  margin-left: 5px;
 }
 
 .post-action-button {
